--- a/pom.xml
+++ b/pom.xml
@@ -58,5 +58,50 @@
     </dependencyManagement>
     <build>
         <finalName>ROOT</finalName>
+        <plugins>
+            <plugin>
+                <groupId>com.microsoft.azure</groupId>
+                <artifactId>azure-webapp-maven-plugin</artifactId>
+                <version>2.3.0</version>
+                <configuration>
+                    <schemaVersion>v2</schemaVersion>
+                    <subscriptionId>${env.AZ_SUBSCRIPTION_ID}</subscriptionId>
+                    <resourceGroup>${env.AZ_RESOURCE_GROUP}</resourceGroup>
+                    <appName>${env.AZ_APP_NAME}</appName>
+                    <pricingTier>${env.AZ_PRICING_TIER}</pricingTier>
+                    <region>${env.AZ_REGION}</region>
+                    <runtime>
+                        <os>Linux</os>
+                        <javaVersion>Java 11</javaVersion>
+                        <webContainer>Tomcat 9.0</webContainer>
+                    </runtime>
+                    <deployment>
+                        <resources>
+                            <resource>
+                                <directory>${project.basedir}/target</directory>
+                                <includes>
+                                    <include>*.war</include>
+                                </includes>
+                            </resource>
+                        </resources>
+                    </deployment>
+                    <appSettings>
+                        <property>
+                            <name>STORAGE_CONNECTION_STRING</name>
+                            <value>${env.AZ_STORAGE_CONNECTION_STRING}</value>
+                        </property>
+                        <property>
+                            <name>STORAGE_CONTAINER_NAME</name>
+                            <value>${env.AZ_STORAGE_CONTAINER_NAME}</value>
+                        </property>
+                    </appSettings>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.2</version>
+            </plugin>
+        </plugins>
     </build>
 </project>
